--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>mustang
+        <img src="Screenshot 2025-05-09 08.32.39.png" alt="">
+        <img src="Screenshot 2025-05-09 08.32.56.png" alt="">
+        <img src="Screenshot 2025-05-09 08.33.53.png" alt="">
+</body>
+</html>
