--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>mustang
+    <h1>mustang</h1>
         <img src="Screenshot 2025-05-09 08.32.39.png" alt="">
         <img src="Screenshot 2025-05-09 08.32.56.png" alt="">
         <img src="Screenshot 2025-05-09 08.33.53.png" alt="">
