--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
         <img src="Screenshot 2025-05-09 08.32.39.png" alt="">
         <img src="Screenshot 2025-05-09 08.32.56.png" alt="">
         <img src="Screenshot 2025-05-09 08.33.53.png" alt="">
+        <p>Junto com o Corvette e o Porsche 911, o Ford Mustang é um dos carros esportivos mais famosos do mundo. E todos os três estão no mercado há muito tempo: o Vette desde 1953, o 911 desde 1963 e o "Stang" desde 1964. E hoje vamos contar a história do Mustang, com uma bela galeria de fotos ao final.
+
+Naturalmente, a recentemente apresentada sétima geração Mustang não tem nada a ver com o modelo original, exceto pelo nome e certas influências do design. Atrás do primeiro Mustang estava uma idéia engenhosa, que mais tarde foi retomada de forma semelhante com o Opel Manta e o Ford Capri.
+
+Lee Iacocca, membro do conselho de administração da Ford no início dos anos 1960, reconheceu os sinais dos tempos: uma jovem geração de clientes de automóveis havia crescido e não queria um sedan convencional por seu dinheiro, mas algo com mais esportividade. Com base no baixo preço do Ford Falcon introduzido em 1960, foi criado o projeto "Special Falcon", a partir do qual surgiu o Mustang.</p>
+
 </body>
 </html>
